[metadata]
name = oschecks
summary = OpenStack monitoring tools
description-file =
    README.md
author = Lars Kellogg-Stedman
author-email = lars@redhat.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    oschecks

[entry_points]
oschecks.check =
    check_http = oschecks.check.check_http:check_http
    check_nova_api = oschecks.check.check_nova:check_nova_api
    check_glance_api = oschecks.check.check_glance:check_glance_api
    check_cinder_api = oschecks.check.check_cinder:check_cinder_api

console_scripts =
    oschecks = oschecks.main:cli

[wheel]
universal = 1

[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true
